--- a/Studio2_AI_Testing/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Studio2_AI_Testing/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -112,7 +112,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/AI/NPC
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/AI
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=False
@@ -141,16 +141,17 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/AI/NPC/PatrolPath
-MRUItem1=/Game/ThirdPersonBP/AI/NPC/AC_NPC
-MRUItem2=/Game/ThirdPersonBP/AI/NPC/DecrementPathIndex
-MRUItem3=/Game/ThirdPersonBP/AI/NPC/NPC
-MRUItem4=/Game/ThirdPersonBP/AI/NPC/BTTask_BlueprintBase_New
-MRUItem5=/Game/ThirdPersonBP/AI/NPC/IncrementPathIndex
-MRUItem6=/Game/ThirdPersonBP/AI/NPC/FindPathPoint
-MRUItem7=/Game/ThirdPersonBP/AI/NPC/BT_NPC
-MRUItem8=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem9=/Game/ThirdPersonBP/AI/NPC/BB_NPC
+MRUItem0=/Game/ThirdPersonBP/AI/NPC/BT_NPC
+MRUItem1=/Game/ThirdPersonBP/AI/NPC/BB_NPC
+MRUItem2=/Game/ThirdPersonBP/AI/NPC/FindPathPoint
+MRUItem3=/Game/ThirdPersonBP/AI/NPC/DecrementPathIndex
+MRUItem4=/Game/ThirdPersonBP/AI/NPC/NPC
+MRUItem5=/Game/ThirdPersonBP/AI/NPC/PatrolPath
+MRUItem6=/Game/ThirdPersonBP/AI/NPC/AC_NPC
+MRUItem7=/Game/ThirdPersonBP/AI/NPC/IncrementPathIndex
+MRUItem8=/Game/ThirdPersonBP/AI/NPC/LoopPath
+MRUItem9=/Game/ThirdPersonBP/AI/NPC/BTTask_BlueprintBase_New
+MRUItem10=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
 
 [DetailCategories]
 BehaviorTreeGraphNode_Root.AI=True
@@ -359,6 +360,162 @@ BTTask_WaitBlackboardTime.Task=True
 BTTask_WaitBlackboardTime.Description=True
 FloatProperty.Variable=True
 FloatProperty.DefaultValueCategory=True
+DocumentationActor.TransformCommon=True
+DocumentationActor.Lighting=True
+DocumentationActor.Help Data=True
+DocumentationActor.Physics=True
+DocumentationActor.VirtualTexture=True
+DocumentationActor.Tags=True
+DocumentationActor.Activation=True
+DocumentationActor.Cooking=True
+DocumentationActor.Replication=True
+EditorStyleSettings.UserInterface=True
+EditorStyleSettings.Accessibility=True
+EditorStyleSettings.Colors=True
+EditorStyleSettings.Graphs=True
+EditorStyleSettings.Output Log=True
+EditorExperimentalSettings.HDR=True
+EditorExperimentalSettings.Foliage=True
+EditorExperimentalSettings.Tools=True
+EditorExperimentalSettings.UserInterface=True
+EditorExperimentalSettings.Blueprints=True
+EditorExperimentalSettings.Cooking=True
+EditorExperimentalSettings.AI=True
+EditorExperimentalSettings.PIE=True
+EditorExperimentalSettings.LightingBuilds=True
+EditorExperimentalSettings.Core=True
+EditorExperimentalSettings.Materials=True
+EditorExperimentalSettings.Content Browser=True
+EditorSettings.DerivedData=True
+EditorKeyboardShortcutSettings.AdvancedPreviewScene=True
+EditorKeyboardShortcutSettings.AnimGraph=True
+EditorKeyboardShortcutSettings.AssetEditor=True
+EditorKeyboardShortcutSettings.AssetManagerEditorCommands=True
+EditorKeyboardShortcutSettings.BlueprintDebugger=True
+EditorKeyboardShortcutSettings.ClothPainterTools=True
+EditorKeyboardShortcutSettings.ClothPainter=True
+EditorKeyboardShortcutSettings.SequenceRecorder.Common=True
+EditorKeyboardShortcutSettings.GenericCommands=True
+EditorKeyboardShortcutSettings.WidgetDesigner=True
+EditorKeyboardShortcutSettings.EditorViewport=True
+EditorKeyboardShortcutSettings.ContentBrowser=True
+EditorKeyboardShortcutSettings.GenericCurveEditor=True
+EditorKeyboardShortcutSettings.CurveEditorTools=True
+EditorKeyboardShortcutSettings.TabCommands=True
+EditorKeyboardShortcutSettings.FoliageEditMode=True
+EditorKeyboardShortcutSettings.GraphEditor=True
+EditorKeyboardShortcutSettings.LandscapeEditor=True
+EditorKeyboardShortcutSettings.LayersView=True
+EditorKeyboardShortcutSettings.LevelEditor=True
+EditorKeyboardShortcutSettings.LevelEditorModes=True
+EditorKeyboardShortcutSettings.LevelSequenceEditor=True
+EditorKeyboardShortcutSettings.LevelViewport=True
+EditorKeyboardShortcutSettings.MainFrame=True
+EditorKeyboardShortcutSettings.MaterialEditor=True
+EditorKeyboardShortcutSettings.MediaPlayerEditor=True
+EditorKeyboardShortcutSettings.MeshPainter=True
+EditorKeyboardShortcutSettings.PersonaCommon=True
+EditorKeyboardShortcutSettings.PlayWorld=True
+EditorKeyboardShortcutSettings.RayTracingDebugVisualizationMenu=True
+EditorKeyboardShortcutSettings.VisualizationMenu=True
+EditorKeyboardShortcutSettings.Sequencer=True
+EditorKeyboardShortcutSettings.ShowFlagsMenu=True
+EditorKeyboardShortcutSettings.SplineComponentVisualizer=True
+EditorKeyboardShortcutSettings.SteamVREditor=True
+EditorKeyboardShortcutSettings.SystemWideCommands=True
+EditorKeyboardShortcutSettings.NUTLogWidget=True
+EditorKeyboardShortcutSettings.EditorViewportClient=True
+EditorKeyboardShortcutSettings.VisualLogger=True
+LiveCodingSettings.General=True
+LiveCodingSettings.Modules=True
+EditorLoadingSavingSettings.Startup=True
+EditorLoadingSavingSettings.AutoReimport=True
+EditorLoadingSavingSettings.Blueprints=True
+EditorLoadingSavingSettings.AutoSave=True
+EditorLoadingSavingSettings.SourceControl=True
+EditorPerProjectUserSettings.DeveloperTools=True
+EditorPerProjectUserSettings.AI=True
+EditorPerProjectUserSettings.SimplygonSwarm=True
+EditorPerProjectUserSettings.HotReload=True
+EditorPerProjectUserSettings.Import=True
+EditorPerProjectUserSettings.Export=True
+EditorPerProjectUserSettings.UnrealAutomationTool=True
+EditorPerformanceSettings.EditorPerformance=True
+InternationalizationSettingsModel.Internationalization=True
+InternationalizationSettingsModel.Time=True
+SourceCodeAccessSettings.Accessor=True
+EditorTutorialSettings.Tutorials=True
+VRModeSettings.General=True
+VRModeSettings.Cinematics=True
+VRModeSettings.World Movement=True
+VRModeSettings.UI Customization=True
+VRModeSettings.Motion Controllers=True
+LevelEditorMiscSettings.Editing=True
+LevelEditorMiscSettings.Sound=True
+LevelEditorMiscSettings.Levels=True
+LevelEditorMiscSettings.Screenshots=True
+LevelEditorPlaySettings.PlayInEditor=True
+LevelEditorPlaySettings.GameViewportSettings=True
+LevelEditorPlaySettings.PlayInNewWindow=True
+LevelEditorPlaySettings.PlayInStandaloneGame=True
+LevelEditorPlaySettings.MultiplayerOptions=True
+LevelEditorPlaySettings.PlayOnDevice=True
+OnlinePIESettings.Logins=True
+LevelEditorViewportSettings.Controls=True
+LevelEditorViewportSettings.LookAndFeel=True
+LevelEditorViewportSettings.GridSnapping=True
+LevelEditorViewportSettings.Preview=True
+PersonaOptions.Preview Scene=True
+PersonaOptions.Viewport=True
+PersonaOptions.Audio=True
+PersonaOptions.Composites and Montages=True
+PersonaOptions.Skeleton Tree=True
+PersonaOptions.Mesh=True
+PersonaOptions.Asset Browser=True
+BlueprintEditorSettings.VisualStyle=True
+BlueprintEditorSettings.Workflow=True
+BlueprintEditorSettings.Compiler=True
+BlueprintEditorSettings.DeveloperTools=True
+BlueprintEditorSettings.Performance=True
+ContentBrowserSettings.ContentBrowser=True
+CurveEditorSettings.Curve Editor=True
+SequencerSettings.Keyframing=True
+SequencerSettings.General=True
+SequencerSettings.Timeline=True
+SequencerSettings.Snapping=True
+SequencerSettings.CurveEditor=True
+SequencerSettings.Playback=True
+FlipbookEditorSettings.Background=True
+GraphEditorSettings.GeneralStyle=True
+GraphEditorSettings.Splines=True
+GraphEditorSettings.PinColors=True
+GraphEditorSettings.NodeTitleColors=True
+GraphEditorSettings.Tracing=True
+MaterialEditorSettings.Offline Shader Compilers=True
+MaterialEditorSettings.User Interface Domain=True
+MeshPaintSettings.Visualization=True
+SkeletalMeshEditorSettings.AnimationPreview=True
+SpriteEditorSettings.Background=True
+TileMapEditorSettings.Background=True
+TileMapEditorSettings.Grid=True
+TileSetEditorSettings.Background=True
+TileSetEditorSettings.Tile Editor=True
+TileSetEditorSettings.Tile Sheet Conditioning=True
+WidgetDesignerSettings.GridSnapping=True
+WidgetDesignerSettings.Dragging=True
+WidgetDesignerSettings.Visuals=True
+WidgetDesignerSettings.Interaction=True
+CrashReportsPrivacySettings.Options=True
+AnalyticsPrivacySettings.Options=True
+AutomationTestSettings.Loading=True
+AutomationTestSettings.Automation=True
+AutomationTestSettings.Open Asset Tests=True
+AutomationTestSettings.MiscAutomationSetups=True
+AutomationTestSettings.ExternalTools=True
+AutomationTestSettings.Screenshots=True
+CrashReporterSettings.CrashReporter=True
+LogVisualizerSettings.VisualLogger=True
+BlueprintEditorSettings.Experimental=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/AI/NPC/NPC.NPC=0
@@ -380,7 +537,7 @@ BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
 EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
-Object="\"Object.AI.AI|BehaviorTree\" "
+Object=
 BlackboardData="\"Object.Blackboard\" "
 DataAsset="\"Object.Blackboard\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -394,6 +551,15 @@ ThirdPersonCharacter_C="\"Object.Character.CharacterMovement.Object.NavMovement.
 AIPerceptionStimuliSourceComponent="\"Object.AI Perception.RegisterAsSourceForSenses\" "
 ActorComponent="\"Object.AI Perception.RegisterAsSourceForSenses\" "
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" "
+EditorStyleSettings="\"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" "
+EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
+EditorTutorialSettings="\"Object.Tutorials.Categories\" \"Object.Tutorials.Categories.Categories[0]\" \"Object.Tutorials.Categories.Categories[1]\" \"Object.Tutorials.Categories.Categories[2]\" \"Object.Tutorials.Categories.Categories[3]\" \"Object.Tutorials.Categories.Categories[4]\" \"Object.Tutorials.Categories.Categories[5]\" \"Object.Tutorials.Categories.Categories[6]\" \"Object.Tutorials.Categories.Categories[7]\" \"Object.Tutorials.Categories.Categories[8]\" \"Object.Tutorials.TutorialContexts\" \"Object.Tutorials.TutorialContexts.TutorialContexts[0]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[1]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[2]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[3]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[4]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[5]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[6]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[7]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[8]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[9]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[10]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[11]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[12]\" "
+LevelEditorPlaySettings="\"Object.MultiplayerOptions.NetworkEmulationSettings\" \"Object.MultiplayerOptions.NetworkEmulationSettings.OutPackets\" \"Object.MultiplayerOptions.NetworkEmulationSettings.InPackets\" "
+LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" \"Object.GridSnapping.DecimalGridIntervals\" \"Object.GridSnapping.Pow2GridSizes\" \"Object.GridSnapping.Pow2GridIntervals\" \"Object.GridSnapping.CommonRotGridSizes\" \"Object.GridSnapping.DivisionsOf360RotGridSizes\" \"Object.GridSnapping.ScalingGridSizes\" \"Object.Preview.PreviewMeshes\" "
+PersonaOptions="\"Object.Preview Scene.Preview Scene|AdditionalMesh\" "
+CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
+AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
+AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation.BuildPromotionTest\" \"Object.Automation.BuildPromotionTest.ImportWorkflow\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Diffuse\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Normal\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.StaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.ReimportStaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.BlendShapeMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.MorphMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SkeletalMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Animation\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Sound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SurroundSound\" \"Object.Automation.BuildPromotionTest.OpenAssets\" \"Object.Automation.BuildPromotionTest.NewProjectSettings\" \"Object.Automation.MaterialEditorPromotionTest\" \"Object.Automation.ParticleEditorPromotionTest\" \"Object.Automation.BlueprintEditorPromotionTest\" \"Object.MiscAutomationSetups.TestLevelFolders\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/ThirdPersonBP/AI/NPC/PatrolPath.PatrolPath;
@@ -402,8 +568,8 @@ RecentlyPlaced=/Game/ThirdPersonBP/AI/NPC/NPC.NPC;
 
 [RootWindow]
 ScreenPosition=X=1280.000 Y=690.000
-WindowSize=X=1286.000 Y=726.000
-InitiallyMaximized=False
+WindowSize=X=1304.000 Y=744.000
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -419,7 +585,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/csheppardmorris/Documents/AI-Studio2-Testing/Studio2_AI_Testing/Content/ThirdPersonBP/Maps
+UNR=../../../../../../Users/csheppardmorris/Documents/AI Studio2 Testing/Studio2_AI_Testing/Content/ThirdPersonBP/Maps
 BRUSH=../../../../../../Users/csheppardmorris/Documents/AI-Studio2-Testing/Studio2_AI_Testing/Content/
 FBX=../../../../../../Users/csheppardmorris/Documents/AI-Studio2-Testing/Studio2_AI_Testing/Content/
 FBXAnim=../../../../../../Users/csheppardmorris/Documents/AI-Studio2-Testing/Studio2_AI_Testing/Content/
@@ -1137,10 +1303,37 @@ Voice.TimeStamp=2020.01.30-05.07.44
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2020.01.30-05.07.34
 MovieSceneCapture.LastCompileMethod=Unknown
+EnvironmentQueryEditor.TimeStamp=2020.01.30-04.23.08
+EnvironmentQueryEditor.LastCompileMethod=Unknown
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24.000000
 Property=0.500000
 Value=1.000000
+
+[/Script/UnrealEd.EditorExperimentalSettings]
+bHDREditor=False
+HDREditorNITLevel=160.000000
+bProceduralFoliage=False
+bEnableLocalizationDashboard=True
+bEnableTranslationPicker=False
+bEnableFavoriteSystem=False
+ConsoleForGamepadLabels=None
+bDrawMidpointArrowsInBlueprints=False
+bContextMenuChunkAssignments=False
+bDisableCookInEditor=False
+bSharedCookedBuilds=False
+MultiProcessCooking=0
+bEQSEditor=True
+bAllowLateJoinInPIE=False
+bAllowVulkanPreview=False
+bEnableMultithreadedLightmapEncoding=False
+bEnableMultithreadedShadowmapEncoding=False
+bUseOpenCLForConvexHullDecomp=False
+bAllowPotentiallyUnsafePropertyEditing=False
+bFacialAnimationImporter=False
+bMobilePIEPreviewDeviceLaunch=False
+bTextAssetFormatSupport=False
+bEnableLongPathsSupport=False
 
 
